RESOLVED FIXED73595
Focus ring of imagemap's area element does not scale when CSS zoom style is applied
https://bugs.webkit.org/show_bug.cgi?id=73595
Summary Focus ring of imagemap's area element does not scale when CSS zoom style is a...
Max Vujovic
Reported 2011-12-01 15:26:54 PST
Created attachment 117503 [details] Reproduction In the attached reproduction, the clickable region of the area element scales with the image, but the area element's focus ring does not scale. The image has a CSS zoom property applied to it.
Attachments
Reproduction (644 bytes, text/html)
2011-12-01 15:26 PST, Max Vujovic
no flags
Patch (4.16 KB, patch)
2011-12-01 17:24 PST, Max Vujovic
no flags
Max Vujovic
Comment 1 2011-12-01 17:24:01 PST
Created attachment 117531 [details] Patch HTMLAreaElement is only considering the page zoom when computing the path for drawing the focus ring. In the patch, I've updated HTMLAreaElement to use the RenderObject's effectiveZoom instead of the Frame's page zoom. effectiveZoom takes into account both the page zoom and any scaling from a CSS zoom property.
WebKit Review Bot
Comment 2 2011-12-01 22:33:10 PST
Comment on attachment 117531 [details] Patch Clearing flags on attachment: 117531 Committed r101743: <http://trac.webkit.org/changeset/101743>
WebKit Review Bot
Comment 3 2011-12-01 22:33:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.