Focus ring of imagemap's area element does not scale when CSS zoom style is applied https://bugs.webkit.org/show_bug.cgi?id=73595

Patch by Max Vujovic <mvujovic@adobe.com> on 2011-12-01
Reviewed by Darin Adler.

Source/WebCore:

Tests: fast/images/imagemap-focus-ring-zoom-style-expected.html
       fast/images/imagemap-focus-ring-zoom-style.html

* html/HTMLAreaElement.cpp:
(WebCore::HTMLAreaElement::computePath):
The computePath method now uses the RenderObject's effectiveZoom
instead of the Frame's page zoom to compute the path for the area
element's focus ring.

LayoutTests:

* fast/images/imagemap-focus-ring-zoom-style-expected.html: Added.
* fast/images/imagemap-focus-ring-zoom-style.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@101743 bbb929c8-8fbe-4397-9dbb-9b2b20218538